--- a/style.css
+++ b/style.css
@@ -31,13 +31,13 @@ body > main > p{
 }
 
 body > main > a:first-of-type {
-display: block;
-border: solid #fff 4px; 
-width: 27px;
-height: 27px;
-margin: auto;
-border-radius: 50%;
-padding: 10px;
+    display: block;
+    border: solid #fff 4px; 
+    width: 27px;
+    height: 27px;
+    margin: auto;
+    border-radius: 50%;
+    padding: 10px;
 
 }
 
@@ -85,4 +85,35 @@ body > main .button {
     color: #fff;
     text-decoration: none;
     border : solid 2px;
+}
+
+#citation  {
+    background-color: #5a6869;
+}
+
+#citation > div > div {
+height: 400px;
+background-color: #5a6869;
+
+}
+
+#citation > div  img {
+    display: block;
+    border: solid #fff 4px; 
+    margin: auto;
+    position: relative;
+    height: 80px;
+    top: 50px;
+}
+
+#citation > div p {
+        width: 500px;
+        margin: auto;
+        font-style: italic;
+        line-height: 50px;
+        color: #fff;
+        text-align: center;
+        font-size: 25px;
+        bottom: 20px;
+        font-family: lato;
 }
