--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ body > main .button {
     background-color: #5a6869;
 }
 
-#citation > div > div {
-height: 400px;
+#citation {
+height: 450px;
 background-color: #5a6869;
 
 }
@@ -103,11 +103,14 @@ background-color: #5a6869;
     margin: auto;
     position: relative;
     height: 80px;
+    box-sizing: 80px;
     top: 50px;
+    border-radius: 50%;
+
 }
 
 #citation > div p {
-        width: 500px;
+        width: 700px;
         margin: auto;
         font-style: italic;
         line-height: 50px;
@@ -116,4 +119,255 @@ background-color: #5a6869;
         font-size: 25px;
         bottom: 20px;
         font-family: lato;
+        bottom: 300px;
+        display: block;
+        margin-top: 150px;
+        font-weight: lighter;
+        
+    }
+
+#demo {
+    background-color: white;
+    height: 450px;
+    text-align: center;
+}
+
+#demo-text {
+    column-count: 2;
+    padding-left: 200px;
+    padding-right: 200px;
+    column-gap: 50px;
+    text-decoration: none;
+    text-align: justify;
+    margin-top: 50px;
+    font-weight: bold;
+    color: #889a9c;
+    letter-spacing: 0.5px;
+}
+
+#demo-text > h2 {
+    text-transform: uppercase;
+    font-family: lato;
+    font-size: 15px;
+    line-height: 30px;
+    letter-spacing: 5px;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+#demo-text > p {
+    font-size: 13px;
+    line-height: 20px;
+    padding-left: 0;
+}
+
+#more, #extra {
+    line-height: 40px;
+    padding-bottom: 0;
+
+}
+
+#dreamy {
+    margin-top: 0;
+   
+}
+
+#try-demo {
+    background-color: #f69679;
+    border-radius: 5px;
+    margin-top: 50px;
+}
+
+#pola {
+    background-color: #f6f6f4;
+    color: #889a9c;
+    text-align: left;
+    height: 550px;
+    padding-top: 50px;
+}
+
+#pola > h2 {
+    text-transform: uppercase;
+    padding-left: 30px;
+    
+}
+
+#rouge {
+    background-color: white;
+    width: 350px;
+    display: inline-block;
+    margin-top: 0;
+    padding-top: 0;
+    padding-bottom: 15px;
+    margin-left: 200px;
+    
+}
+
+#rouge > img {
+    width: 350px;
+}
+
+#rouge > h2 {
+    margin-top: 20px;
+    line-height: 15px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-family: lato;
+    font-size: 15px;
+    line-height: 20px;
+    letter-spacing: 5px;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+#rouge > h2, p {
+    padding-left: 50px;
+}
+
+#rouge > p {
+    margin-top: 0;
+    line-height: 15px;
+}
+
+#orange {
+    background-color: white;
+    display: inline-block;
+    margin-left: 20px;
+    width: 350px;  
+    padding-bottom: 15px;
+    
+}
+
+#orange > img {
+   width: 350px;
+   
+}
+
+#orange > h2 {
+    margin-top: 20px;
+    line-height: 15px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-family: lato;
+    font-size: 15px;
+    line-height: 20px;
+    letter-spacing: 5px;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+#orange > h2, p {
+    padding-left: 50px;
+}
+
+#orange > p {
+    padding-top: 0;
+    line-height: 15px;
+}
+
+#description {
+    display: inline-block;
+    margin-left: 20px;
+    width: 350px;
+    text-align: left;
+    position: absolute;
+   
+}
+
+#description > h2 {
+    padding-top: 0;
+    margin-top: 0;
+    font-weight: 400;
+    font-family: lato;
+    font-size: 30px
+    
+    
+}
+
+#description > p {
+    font-size: 13px;
+    line-height: 20px;
+    padding-left: 0;
+    margin-top: 0;
+    font-weight: bold;
+}
+
+#nav {
+    display: block;
+    float: right;
+    padding-top: 500px;
+    padding-right: 100px;
+    margin-right: 0;
+}
+#nav > a {
+    text-decoration: none; 
+    font-size: 30px;
+    font-weight: bolder;
+    line-height: 50px;
+    
+}
+
+#pied {
+    
+    background-color: #79ccc8;
+    color: white;
+    padding-top: 50px;
+    
+}
+
+#conclusion {
+    display: inline-block;
+    width: 700px;
+    text-align: left;
+    padding-left: 100px;
+    vertical-align: top;
+    padding-bottom: 100px;
+    
+}
+
+#conclusion > p {
+    
+    line-height: 15px;
+    text-decoration: none;
+    margin: 0;
+    
+}
+
+
+#txt1 {
+    display: inline-block;
+    width: 300px;
+    vertical-align: top;
+    margin-right: 20px;
+   
+    
+}
+#txt2 {
+    display: inline-block;
+    width: 200px;
+    padding-left: 20px;
+    vertical-align: top;
+    
+
+}
+
+#liens {
+    float: right;
+    width: 150px;
+    text-decoration: none;
+    color: white;
+    vertical-align: top;
+    padding-right: 150px;
+    
+}
+
+#liens > ul {
+    list-style: none;
+    margin-top: 0;
+}
+
+#liens > ul > li a {
+    text-decoration: none;
+    color: white;
+    line-height: 30px;
 }
